<resources>
    <string name="app_name">MAPAssign4</string>
    <string name="exit">EXIT</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="upload">Upload Picture</string>
    <string name="mvp">MVP</string>
    <string name="sport">Sport</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="submit">SUBMIT</string>
    <string name="justin_vuu">Justin Vuu</string>
    <string name="add_team">ADD TEAM</string>

    <string-array name="sports">
        <item></item>
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Football</item>
        <item>Hockey</item>
        <item>Soccer</item>
    </string-array>
</resources>
