<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#33b5e5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#a6c"
            android:textColor="#fff"
            android:textSize="28sp"
            android:text="@string/justin_vuu"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txtAddTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/add_team"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#000" />
            <TextView
                android:id="@+id/txtExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/exit"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#000" />
        </LinearLayout>
        <ListView
            android:id="@+id/listTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>