<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTeamActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#a6c">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#f44">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15sp"
                    android:paddingEnd="15sp"
                    android:text="@string/city"
                    android:textSize="30sp" />
                <EditText
                    android:id="@+id/editCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:inputType="textPersonName"
                    android:hint="@string/city"
                    android:textSize="30sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15sp"
                    android:paddingEnd="15sp"
                    android:text="@string/name"
                    android:textSize="30sp" />
                <EditText
                    android:id="@+id/editName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:inputType="textPersonName"
                    android:hint="@string/name"
                    android:textSize="30sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15sp"
                    android:paddingEnd="15sp"
                    android:text="@string/sport"
                    android:textSize="30sp" />
                <EditText
                    android:id="@+id/editSport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:inputType="textPersonName"
                    android:hint="@string/sport"
                    android:textSize="30sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15sp"
                    android:paddingEnd="15sp"
                    android:text="@string/mvp"
                    android:textSize="30sp" />
                <EditText
                    android:id="@+id/editMVP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:inputType="textPersonName"
                    android:hint="@string/mvp"
                    android:textSize="30sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15sp"
                    android:paddingEnd="15sp"
                    android:text="@string/stadium"
                    android:textSize="30sp" />
                <EditText
                    android:id="@+id/editStadium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:inputType="textPersonName"
                    android:hint="@string/stadium"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/update"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/delete"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/exit"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#000"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>